# fArgParse

./: .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  ChangeLog.md  FARGPARSE-config-version.cmake.in  FARGPARSE-config.cmake.in  FARGPARSE.mk.in  FARGPARSEConfig.cmake.in  LICENSE  README.md
.github/workflows/: changelog-enforcer.yml  main.yml
Examples/Simple/: CMakeLists.txt  driver.F90
cmake/: FindFTL.cmake  FindGFTL.cmake  FindGFTL_SHARED.cmake  GNU.cmake  IntelLLVM.cmake  NAG.cmake  NVHPC.cmake  PGI.cmake  build_submodule.cmake
src/: AbstractArgParser.F90  ActionVector.F90  Arg.F90  ArgParser.F90  ArgVector.F90  BaseAction.F90  CMakeLists.txt  Cast.F90  CommandLineArguments.F90  ErrorCodes.F90  HelpAction.F90  IntegerVector.F90  KeywordEnforcer.F90  None.F90  RealVector.F90  StoreAction.F90  StoreConstAction.F90  StoreFalseAction.F90  StoreTrueAction.F90  String.F90  StringActionMap.F90  StringUnlimitedMap.F90  StringVector.F90  fArgParse.F90  fParse.F90
tests/: CMakeLists.txt  Test_Arg.pf  Test_ArgParser.pf  Test_BaseAction.pf  Test_Cast.pf  testSuites.inc
tools/: travis-install-gfe.bash
